EMP-12 Add account service (#13)
