# docs/swagger.json
@@ -15,6 +15,74 @@
     "host": "localhost:8082",
     "basePath": "/",
     "paths": {
+        "/accounts/{ehid}/career": {
+            "get": {
+                "description": "Get a career",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Accounts"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "EHID",
+                        "name": "ehid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success Response",
+                        "schema": {
+                            "$ref": "#/definitions/internal_account.GetCareerResponseDto"
+                        }
+                    },
+                    "400": {
+                        "description": "BadRequest"
+                    },
+                    "500": {
+                        "description": "InternalServerError"
+                    }
+                }
+            }
+        },
+        "/accounts/{ehid}/profile": {
+            "get": {
+                "description": "Get a profile",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Accounts"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "EHID",
+                        "name": "ehid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success Response",
+                        "schema": {
+                            "$ref": "#/definitions/internal_account.GetProfileResponseDto"
+                        }
+                    },
+                    "400": {
+                        "description": "BadRequest"
+                    },
+                    "500": {
+                        "description": "InternalServerError"
+                    }
+                }
+            }
+        },
         "/gradings": {
             "post": {
                 "description": "Post a new gradings",
@@ -153,40 +221,6 @@
                         "description": "Success Response",
                         "schema": {
                             "$ref": "#/definitions/internal_grading.PatchResponseDto"
-                        }
-                    },
-                    "400": {
-                        "description": "BadRequest"
-                    },
-                    "500": {
-                        "description": "InternalServerError"
-                    }
-                }
-            }
-        },
-        "/profiles/{ehid}": {
-            "get": {
-                "description": "Get a profile",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Profiles"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "EHID",
-                        "name": "ehid",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success Response",
-                        "schema": {
-                            "$ref": "#/definitions/internal_profile.GetResponseDto"
                         }
                     },
                     "400": {
@@ -349,6 +383,26 @@
         }
     },
     "definitions": {
+        "github_com_mrexmelle_connect-emp_internal_career.Aggregate": {
+            "type": "object",
+            "properties": {
+                "ehid": {
+                    "type": "string"
+                },
+                "end_date": {
+                    "type": "string"
+                },
+                "grade": {
+                    "type": "string"
+                },
+                "start_date": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "github_com_mrexmelle_connect-emp_internal_dto.ServiceError": {
             "type": "object",
             "properties": {
@@ -357,6 +411,31 @@
                 },
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "internal_account.GetCareerResponseDto": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_mrexmelle_connect-emp_internal_career.Aggregate"
+                    }
+                },
+                "error": {
+                    "$ref": "#/definitions/github_com_mrexmelle_connect-emp_internal_dto.ServiceError"
+                }
+            }
+        },
+        "internal_account.GetProfileResponseDto": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/libauthxc.ProfileEntity"
+                },
+                "error": {
+                    "$ref": "#/definitions/github_com_mrexmelle_connect-emp_internal_dto.ServiceError"
                 }
             }
         },
@@ -441,17 +520,6 @@
                 },
                 "start_date": {
                     "type": "string"
-                }
-            }
-        },
-        "internal_profile.GetResponseDto": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/libauthxc.ProfileEntity"
-                },
-                "error": {
-                    "$ref": "#/definitions/github_com_mrexmelle_connect-emp_internal_dto.ServiceError"
                 }
             }
         },
