# internal/profile/dto.go
@@ -1,8 +1,0 @@
-package profile
-
-import (
-	"github.com/mrexmelle/connect-authx/pkg/libauthxc"
-	"github.com/mrexmelle/connect-emp/internal/dto/dtorespwithdata"
-)
-
-type GetResponseDto = dtorespwithdata.Class[libauthxc.ProfileEntity]
